--- a/index.html
+++ b/index.html
@@ -10,48 +10,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <h1>Header Logo</h1> 
-        <div class="sh">
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
-        </div>
-    </div>
+    <header>
+        <h1>Header Logo</h1>
+        <ul>
+            <li><a>header link one</a></li>
+            <li><a>header link two</a></li>
+            <li><a>header link three</a></li>
+        </ul>
+    </header>
     <div class="top">
-        <h2>This website is<br>awesome</h2>
-        <p>This website has some subtext that goes under the<br>main title. It's a smaller font and the color is lower<br>contrast </p>
-        <button>Sign up</button>
-        <img id="one">
+        <div class="content">
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast </p>
+            <button>Sign up</button>
+        </div>
+        <img src="omelette.webp" alt="omelette">
     </div>
+
     <div class="part2">
         <h3>Some random information.</h3>
-        <div class="1">
-            <img>
-            <p>this is some subtext<br>under a illustration<br>or image</p>
-        </div>
-        <div class="1">
-            <img>
-            <p>this is some subtext<br>under a illustration<br>or image</p>
-        </div>
-        <div class="1">
-            <img>
-            <p>this is some subtext<br>under a illustration<br>or image</p>
-        </div>
-        <div class="1">
-            <img>
-            <p>this is some subtext<br>under a illustration<br>or image</p>
+        <div class="con">
+            <div class="o">    
+                <img>
+                <p>this is some subtext<br>under a illustration<br>or image</p>
+            </div>
+            <div class="o">
+                <img>
+                <p>this is some subtext<br>under a illustration<br>or image</p>
+            </div>
+            <div class="o">
+                <img>
+                <p>this is some subtext<br>under a illustration<br>or image</p>
+            </div>
+            <div class="o">
+                <img>
+                <p>this is some subtext<br>under a illustration<br>or image</p>
+            </div>
         </div>
     </div>
     <div class="part3">
-        <p class="Test">This is an inspiring quote, or a testimonial from a<br>customer. Maybe it's just filling up space, or maybe<br>people will actually read it. Who knows? All I know<br>is that it looks nice.</p>
-        <p class="credits">Thor, God of Thunder</p>
+        <p class="Test">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="credits">- Thor, God of Thunder</p>
     </div>
-    <div class="part4">
-        <h4>Call to action! It's time!</h4>
-        <p>Sign up for our product by clicking the button right over three!</p>
-        <button>Sign up</button>
-    </div>
-    <footer>Copyright © The Odin Project 2021</footer>
+    <footer>
+        <p>Copyright © The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
