--- a/index.html
+++ b/index.html
@@ -11,46 +11,49 @@
 </head>
 <body>
     <header>
-        <h1>Header Logo</h1>
+        <div class="logo">
+            <img src="anime4.png" alt="logo">
+            <h1>Meh cooks</h1>
+        </div>
         <ul>
-            <li><a>header link one</a></li>
-            <li><a>header link two</a></li>
-            <li><a>header link three</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="https://www.Google.com">Somewhere</a></li>
+            <li><a >No</a></li>
         </ul>
     </header>
     <div class="top">
         <div class="content">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast </p>
-            <button>Sign up</button>
+            <h2>This cook is meh</h2>
+            <p>This food has some meh that goes under the mrh. It's a smaller meh and the color is meh. It's meh, meh and meh. </p>
+            <button><a href="index.html">Sign up</a></button>
         </div>
-        <img src="omelette.webp" alt="omelette">
+        <img src="Anime-Food-PNG-HD.png" alt="food">
     </div>
 
     <div class="part2">
         <h3>Some random information.</h3>
         <div class="con">
             <div class="o">    
-                <img>
+                <img src="Anime2.png">
                 <p>this is some subtext<br>under a illustration<br>or image</p>
             </div>
             <div class="o">
-                <img>
+                <img src="Anime1.png">
                 <p>this is some subtext<br>under a illustration<br>or image</p>
             </div>
             <div class="o">
-                <img>
+                <img src="anime3.webp">
                 <p>this is some subtext<br>under a illustration<br>or image</p>
             </div>
             <div class="o">
-                <img>
+                <img src="anime5.png">
                 <p>this is some subtext<br>under a illustration<br>or image</p>
             </div>
         </div>
     </div>
     <div class="part3">
-        <p class="Test">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="credits">- Thor, God of Thunder</p>
+        <p class="Test">This is an inspiring quote.<br>meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh, meh.</p>
+        <p class="credits">- Meh, God of Meh</p>
     </div>
     <footer>
         <p>Copyright © The Odin Project 2021</p>
